<resources>
    <string name="app_name">Assignment1</string>
    <string name="title">USER FORM</string>
    <string name="name">Name :</string>
    <string name="email">Email ID :</string>
    <string name="password">Password :</string>
    <string name="contact">Contact Number :</string>
    <string name="age">Age :</string>
    <string name="next">Go to next page</string>

    <string name="school">Connect To School</string>
    <string name="eteach">An <b>e-Teaching</b> Service from School</string>
    <string name="login">Login with email</string>
    <string name="tnc">By proceeding, you agree to our <b>Terms of service</b> and <b>Privacy Policy</b></string>
    <string name="account">Create a new account</string>
    <string name="register">Register</string>

    <string name="top">Top</string>
    <string name="center">Center</string>
    <string name="bottom">Bottom</string>
    <string name="l1">L1</string>
    <string name="l2">L2</string>
    <string name="r1">R1</string>
    <string name="r2">R2</string>


</resources>