<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginVertical="10dp"
    android:layout_marginHorizontal="10dp"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/txttitle"
        android:text="@string/title"
        android:fontFamily="@font/roboto"
        android:gravity="center"
        android:textSize="24sp"
        android:textColor="@color/design_default_color_primary_dark"
        android:layout_marginVertical="24dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/txtname"
        android:text="@string/name"
        android:fontFamily="@font/roboto"
        android:textColor="@color/design_default_color_primary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <EditText
        android:id="@+id/etname"
        android:inputType="text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/txtemail"
        android:text="@string/email"
        android:fontFamily="@font/roboto"
        android:textColor="@color/design_default_color_primary"
        android:layout_marginTop="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <EditText
        android:id="@+id/etemail"
        android:inputType="textEmailAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/txtpwd"
        android:text="@string/password"
        android:fontFamily="@font/roboto"
        android:textColor="@color/design_default_color_primary"
        android:layout_marginTop="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <EditText
        android:id="@+id/etpwd"
        android:inputType="textPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/txtcontact"
        android:text="@string/contact"
        android:fontFamily="@font/roboto"
        android:textColor="@color/design_default_color_primary"
        android:layout_marginTop="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <EditText
        android:id="@+id/etcontct"
        android:inputType="number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/txtage"
        android:text="@string/age"
        android:fontFamily="@font/roboto"
        android:textColor="@color/design_default_color_primary"
        android:layout_marginTop="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <NumberPicker
        android:id="@+id/npage"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <Button
        android:id="@+id/btnnext"
        android:text="@string/next"
        android:fontFamily="@font/roboto"
        android:layout_marginTop="12dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

</LinearLayout>